--- a/settings.json
+++ b/settings.json
@@ -156,8 +156,8 @@
 "editor.glyphMargin": false,
 "terminal.integrated.allowChords": false,
 "editor.inlineSuggest.enabled": true,
-"rust-client.channel": "stable", // Channel
-"rust-client.rlsPath": "/opt/homebrew/opt/rust-analyzer/bin/rust-analyzer", // Language server
+"rust-client.channel": "stable",
+"rust-client.rlsPath": "/opt/homebrew/opt/rust-analyzer/bin/rust-analyzer",
 "rust-client.disableRustup": true,
   // This auto-fixes Ruby files, but is super slow
   // "editor.formatOnSave": true,
